# rust-and-nuxt3-app

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
app-api-schema/: Cargo.toml
app-api-schema/src/v1/: add_int.rs  get_int.rs
app-api-server/: Cargo.toml
app-api-server/src/: app.rs  app_config.rs  lib.rs  state.rs  v1.rs
app-api-server/src/v1/: add_int.rs  get_int.rs
app-front-nuxt3/: README.md  nuxt.config.ts  package.json
app-front-nuxt3/pages/: index.vue
app-front-rust/: Cargo.toml
app-front-rust/src/: lib.rs
