[workspace]
resolver = "2"
members = [
    "app-api-schema",
    "app-api-server",
    "app-front-rust",
]

[workspace.dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.11.0" }
dotenvy = { version = "0.15.7" }
gloo-net = "0.5.0"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = { version = "1.0.143" }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

app-api-schema = { path = "app-api-schema" }
app-api-server = { path = "app-api-server" }
app-front-rust = { path = "app-front-rust" }
